--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             <br>
             by
             <a href='https://mightyuhu.github.io/'>Benedikt Wolters</a>
+            <br>
+            <a href='https://github.com/mightyuhu/typetrainer'>Source</a>
           </div>
         </div>
         <div id='right'>
